--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,12 +1,11 @@
-description "Gunicorn application server running AirBnB_clone_v4"
-author "Brennan D Baraban"
+[Unit]
+Description=Gunicorn instance to serve web_dynamic/2-hbnb.py
+After=network.target
 
-start on runlevel [2345]
-stop on runlevel [!2345]
+[Service]
+User=ubuntu
+WorkingDirectory=/AirBnB_clone_v4/web_dynamic/2-hbnb.py
+ExecStart=/usr/local/bin/gunicorn --bind 0.0.0.0:5003 --workers 3 --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log 2-hbnb:app
 
-respawn
-setuid ubuntu
-setgid www-data
-
-chdir /home/ubuntu/AirBnB_clone_v4
-exec gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app >> /tmp/airbnb-access.log 2> /tmp/airbnb-error.logirbnb-access.log
+[Install]
+WantedBy=multi-user.target
